HelloUltraviolet/Fixtures/RejectedSource/SourceText/InvalidStringEscape/Expected.uv
//! Expected diagnostic metadata for the InvalidStringEscape rejected-source specimen.

expectedDiagnostic("E-SRC-0302", "Lex-String-BadEscape")
